--- a/home.html
+++ b/home.html
@@ -64,7 +64,7 @@ h1{
    
    font-size: 36px;
    font-family:'Oswald', sans-serif;
-   font-weight: 200;
+   font-weight: 400;
    line-height: 1.2;
    
    margin-left: 71px;
@@ -151,7 +151,7 @@ h1{
                <br> <br> 
                <h1>DMS SUPPORT & SERVICES </h1>
                
-               <p> We take this opportunity to introduce ourselves as “DMS Support & Services Pvt Ltd” is incorporated with the objective of providing<b> <em>Complete HR Solutions, Real Estate Services and Financial Services .</em> </b>DMS, which intend to provide holistic solutions to the different verticals throughout PAN India with Pay-rolling and Staffing as its forte. DMS intend to provide number of solutions under its operation to various industries at PAN India presence.
+               <p> We take this opportunity to introduce ourselves as “DMS Support & Services Pvt Ltd” is incorporated with the objective of providing <strong> Complete HR Solutions, Real Estate Services and Financial Services .</strong>DMS, which intend to provide holistic solutions to the different verticals throughout PAN India with Pay-rolling and Staffing as its forte. DMS intend to provide number of solutions under its operation to various industries at PAN India presence.
                    </p>
                    <br>
                   
